# catkinpkg_framework

./: CMakeLists.txt  README_challenge3.md  package.xml
include/catkinpkg_framework/: framework_processor.h
include/catkinpkg_framework/parameter/: parameter_bag.h
launch/: catkinpkg_framework.launch
parameter/: parameter_bag.yaml
src/: catkinpkg_framework_node.cpp  framework_processor.cpp
