<?xml version="1.0"?>
<package format="2">
  <name>catkinpkg_framework</name>
  <version>0.0.1</version>
  <description>
    A framework for catkin packages with ros interface.
  </description>

  <maintainer email="marius.grimm93@web.de">Marius Grimm</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>roslib</depend>
</package>